web/css/forms.css
/*
Styling of the forms in the DTA MetadataBundle.
*/

textarea{
    height: 30px;
    width: 80%
}
.dynamic-collection-remove-item-link{
    position: absolute; 
    top: 6px; 
    right: 0;
}
.dynamic-collection.list li{
    padding-bottom: 8px;
}
.dataTables_processing{
    padding-top: 4px !important;
}

.panel{
    margin-bottom: 0px;
    background-color: #ffffff;
    border: 1px solid transparent;
    border-radius: 4px;
    -webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05);
    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05);
}

.panel-heading{
    padding: 0 0 0 0;
}

